Fix: Escape ampersand for LaTeX compilation

--- a/final_presentation.tex
+++ b/final_presentation.tex
@@ -8,7 +8,7 @@
 
 \author{Harsh & Somu}
 \title{Vyomchara}
-\subtitle{Revolutionizing Mining with Integrated Technology}
+\subtitle{An Integrated Technology Platform for the Modern Mining Industry}
 \institute{IITB BharatGEN}
 \date{\today}
 \usepackage{CNU}
@@ -49,108 +49,112 @@
 \end{frame}
 
 
-\section{The Problem: An Industry Ripe for Disruption}
+\section{The Core Problem in Indian Mining}
 
-\begin{frame}{The Indian Mining Sector: A Foundation of the Economy Facing Foundational Cracks}
+\begin{frame}{A Foundational Industry Facing a Digital Divide}
     \begin{itemize}[<+-| alert@+>] 
-        \item \textbf{Technological Stagnation:} High resistance to new tech due to entrenched practices and workforce concerns.
-        \item \textbf{Fragmented Solutions:} Lack of a single, end-to-end platform for the entire mining lifecycle (Auction -> Exploration -> Production -> Delivery).
-        \item \textbf{Operational Inefficiency:} Challenges in key areas like ventilation, geological surveying, and resource management.
-        \item \textbf{High Costs & Remote Infra:} Expensive equipment and limited infrastructure in key mining regions.
-    \end{itemize}
-    \begin{center}
-        [Placeholder: A diagram showing the fragmented and inefficient mining value chain]
-    \end{center}
-\end{frame}
-
-
-\section{Our Solution: The Vyomchara Mining 4.0 Platform}
-
-\begin{frame}{Integrating the Physical and Digital to Build the Mine of the Future}
-    \begin{itemize}
-        \item \textbf{Core Concept:} A unified platform combining proprietary hardware and intelligent software to optimize the entire mining process.
-        \item \textbf{Three Pillars:}
-            \begin{enumerate}
-                \item \textbf{Acquire:} Gather high-quality data using advanced sensors.
-                \item \textbf{Analyze:} Use AI/ML to derive actionable insights from data.
-                \item \textbf{Act:} Provide tools for automation, management, and reporting.
-            \end{enumerate}
-    \end{itemize}
-    \begin{center}
-        [Placeholder: A high-level diagram showing Acquire -> Analyze -> Act loop with Vyomchara at the center]
-    \end{center}
-\end{frame}
-
-\section{The Technology}
-
-\subsection{The Hardware: "Voxel" - Precision Mineral Analysis}
-
-\begin{frame}{Voxel: Lab-Grade Hyperspectral Analysis, Anywhere.}
-    \begin{itemize}
-        \item \textbf{Description:} A portable, drone-mountable sensor for real-time, non-destructive mineral analysis.
-        \item \textbf{Key Features:}
+        \item \textbf{The Challenge:} The primary issue is a **lack of integrated, end-to-end technological solutions.**
+        \item \textbf{Why is it hard?}
             \begin{itemize}
-                \item \textbf{Functionality:} Iron ore grade detection, mineral mapping.
-                \item \textbf{Technology:} CNC body, advanced outsourced camera, ESP32 for control.
-                \item \textbf{Advantage:} A cost-effective and portable alternative to massive, stationary systems (like Boxscan).
+                \item **Multiple Stakeholders:** Conflicting interests between workers, managers, and contractors.
+                \item **Fragmented Technology:** Existing solutions are piecemeal and don't cover the full operational chain.
+                \item **Remote & Cost-Sensitive:** Operations are in remote locations with limited infrastructure.
             \end{itemize}
     \end{itemize}
     \begin{center}
-        [Placeholder: A 3D render or concept design of the "Voxel" device, possibly mounted on a drone]
+        [Placeholder: A diagram illustrating the fragmented and inefficient mining value chain with disconnected data silos.]
+    \end{center}
+\end{frame}
+
+
+\section{The Competitive Landscape}
+
+\begin{frame}{A Market Dominated by International Giants, with a Gap for an Indian System Integrator}
+    \begin{itemize}
+        \item \textbf{Global Players:} Hexagon, Reactore, Sandvik (Powerful but expensive).
+        \item \textbf{Indian Players:}
+            \begin{itemize}
+                \item \textbf{Stryos:} Offers partial solutions.
+                \item \textbf{AEREO (from IITK):} A drone company pivoting to mining.
+            \end{itemize}
+        \item \textbf{Our Opportunity:} No single Indian company is providing a truly integrated "Mining 4.0" platform.
+    \end{itemize}
+    \begin{center}
+        [Placeholder: A quadrant chart showing Vyomchara positioned as a high-integration, cost-effective solution.]
+    \end{center}
+\end{frame}
+
+\section{Our Solution: The Vyomchara Platform}
+
+\begin{frame}{Acquire, Analyze, Act: A Unified Platform for the Mine of the Future}
+    \begin{itemize}
+        \item \textbf{Core Concept:} We integrate hardware, software, and AI to provide a single source of truth for mining operations.
+        \item \textbf{Three Pillars:}
+            \begin{enumerate}
+                \item \textbf{Acquire:} Use cost-effective drones, IoT, and our proprietary "Voxel" sensor.
+                \item \textbf{Analyze:} Apply AI/ML models (SAM+CNN fusion) for precise mineral detection.
+                \item \textbf{Act:} Provide a "Mining 4.0 Dashboard" for automation and management.
+            \end{enumerate}
+    \end{itemize}
+    \begin{center}
+        [Placeholder: An updated diagram of the Acquire -> Analyze -> Act loop.]
+    \end{center}
+\end{frame}
+
+\subsection{The Hardware: "Voxel" & Cost-Effective Data Acquisition}
+
+\begin{frame}{Voxel: Lab-Grade Analysis, Field-Ready Portability}
+    \begin{itemize}
+        \item \textbf{Voxel Sensor:} A portable, drone-mountable device for real-time hyperspectral analysis.
+        \item \textbf{Cost-Effective Hardware Strategy:}
+            \begin{itemize}
+                \item **Drones:** VTOLs for large-area mapping (₹3.5 lakhs).
+                \item **Cameras:** Siyi A8 Mini for balance of cost and performance (₹30,000).
+                \item **Positioning:** DGPS for centimeter-level accuracy (₹3.5 lakhs).
+            \end{itemize}
+    \end{itemize}
+    \begin{center}
+        [Placeholder: A 3D render of the "Voxel" device, alongside images of the recommended drone and camera hardware.]
     \end{center}
 \end{frame}
 
 \subsection{The Software: AI-Powered Insights & Dashboard}
 
-\begin{frame}{Turning Raw Data into Actionable Intelligence}
+\begin{frame}{Transforming Data into Actionable Intelligence and ROI}
     \begin{itemize}
         \item \textbf{AI Models:}
             \begin{itemize}
-                \item \textbf{SAM (Spectral Angle Mapper):} Identifies specific minerals.
-                \item \textbf{CNN (Convolutional Neural Network):} Identifies mineral block size and location.
-                \item \textbf{Fusion Model:} Combines SAM+CNN for precise deposit mapping.
+                \item \textbf{SAM + CNN Fusion:} Precisely identifies mineral type and location.
             \end{itemize}
         \item \textbf{Mining 4.0 Dashboard:}
             \begin{itemize}
                 \item \textbf{Features:} Fleet & Fuel Management, Asset Maintenance, Production Scheduling, Compliance Reporting (DGMS).
-                \item \textbf{Benefit:} Centralized control, operational visibility, and data-driven decision making.
+                \item \textbf{Benefit:} Centralized control and data-driven decisions that lead to measurable ROI.
             \end{itemize}
     \end{itemize}
     \begin{center}
-        [Placeholder: A mockup of the "Mining 4.0 Dashboard" UI, showing key metrics and modules]
+        [Placeholder: A mockup of the "Mining 4.0 Dashboard" UI.]
     \end{center}
 \end{frame}
 
-\section{Business Model & Go-to-Market Strategy}
+\section{Business Model & Go-to-Market}
 
-\begin{frame}{Flexible Models for a Diverse Market}
+\begin{frame}{Flexible Models for a Diverse and Complex Market}
     \begin{itemize}
         \item \textbf{Dual Approach:}
             \begin{itemize}
-                \item \textbf{B2B Consultancy:} Partner with private firms (e.g., Vedanta, Adani) to provide bespoke optimization solutions.
-                \item \textbf{B2G Tenders:} Bid for government contracts to implement our platform at a larger scale (e.g., with Coal India, OMC).
+                \item \textbf{B2B Consultancy:} Partner with private firms (e.g., Vedanta, Adani) for pilot projects.
+                \item \textbf{B2G Tenders:} Bid for large-scale government contracts (e.g., with Coal India, OMC).
             \end{itemize}
-        \item \textbf{Go-to-Market:}
+        \item \textbf{Go-to-Market Strategy:}
             \begin{itemize}
-                \item \textbf{Multi-Stakeholder Engagement:} Proactively work with all parties to ease tech adoption.
-                \item \textbf{Partnership Ecosystem:} Collaborate to reduce costs and offer a complete solution.
-                \item \textbf{Focus on ROI:} Use clear metrics to prove the value and justify investment.
+                \item **Multi-Stakeholder Engagement:** Address resistance to tech adoption head-on.
+                \item **Partnership Ecosystem:** Build alliances to offer a complete, cost-effective solution.
+                \item \textbf{Focus on ROI:} Use clear metrics to prove value.
             \end{itemize}
     \end{itemize}
     \begin{center}
-        [Placeholder: A diagram showing the B2B and B2G funnels]
-    \end{center}
-\end{frame}
-
-\section{Competitive Landscape}
-
-\begin{frame}{What Sets Us Apart}
-    \begin{itemize}
-        \item \textbf{Existing Solutions:} Mostly fragmented, non-integrated, or extremely expensive (e.g., Geotek's Boxscan).
-        \item \textbf{Our Advantage:} We are a system integrator. Our core IP is the seamless combination of portable hardware, advanced AI, and a unified software platform. We are more affordable and flexible.
-    \end{itemize}
-    \begin{center}
-        [Placeholder: A table comparing Vyomchara to competitors on factors like cost, portability, integration, and AI capabilities]
+        [Placeholder: A diagram illustrating the B2B pilot -> B2G tender pipeline.]
     \end{center}
 \end{frame}
 
@@ -159,17 +163,18 @@
 \begin{frame}{The Team}
     \begin{itemize}
         \item \textbf{Team:} Harsh & Somu
-        \item \textbf{Advisors:} Profs, advisors at ministry levels
+        \item \textbf{Advisors:} Seeking guidance from professors and ministry-level experts.
         \item \textbf{Expertise:} Engineering, AI/ML, Business Strategy
     \end{itemize}
 \end{frame}
 
 \section{Conclusion}
 
-\begin{frame}{Call to Action}
+\begin{frame}{Thank You & Call to Action}
     \begin{itemize}
-        \item \textbf{Ask:} Looking for strategic partnerships and pilot project opportunities.
+        \item \textbf{Ask:} We are seeking strategic partnerships and pilot project opportunities.
         \item \textbf{Contact:} somupra9@gmail.com
+        \item \textbf{Q&A}
     \end{itemize}
 \end{frame}
 
